--- a/2주차.md
+++ b/2주차.md
@@ -271,12 +271,32 @@ int[] intarray = new int[5];
 
 #### 8. 타입 추론 , var
 
+타입 추론이란 코드 작성 당시 타입이 정해지지 않았지만, 컴파일러가 그 타입을 유추하는 것
+
+Java 10 부터 타입 추론을 지원하는 `var` 키워드가 추가되었다.
+
+이 키워드는 `local variable` 이면서 선언과 동시에 `initializer`가 필수적으로 요구된다.
+
+```
+//java 9이하
+String message = "data";
+//java 10이상
+var message = "the initialzer"
+
+컴파일러는 오른쪽에 초기화 값을 제공되는 것을 통해 타입을 유추한다.
+```
 
 
 
 
-참고블로그
+
+참고블로그 및 문헌
 
 https://gbsb.tistory.com/6
 
 https://www.learningjournal.guru/article/programming-in-java/scope-and-lifetime-of-a-variable/
+
+이것이 자바다
+
+https://velog.io/@bk_log/Java-%ED%83%80%EC%9E%85-%EC%B6%94%EB%A1%A0
+
