스크린샷 테스트

--- a/3주차.md
+++ b/3주차.md
@@ -6,9 +6,9 @@
 
 산술 연산자에는 `+, -, *, /, %`가 있다. 산술연산자일 경우는 숫자타입(byte, short, int, long, float, double)으로 결과값이 나온다.
 
-![image-20201122203803148](C:\Users\MS\AppData\Roaming\Typora\typora-user-images\image-20201122203803148.png)
+![1](C:\Users\MS\Desktop\이직\whiteshipstudy\screenshot\1.PNG)
 
-![image-20201122203822710](C:\Users\MS\AppData\Roaming\Typora\typora-user-images\image-20201122203822710.png)
+![1-1](C:\Users\MS\Desktop\이직\whiteshipstudy\screenshot\1-1.PNG)
 
 *는 곱하기, / 는 나누기를 하여 몫을 구하는 연산자이다.
 
@@ -24,7 +24,7 @@
 
 그렇다면 `int` 대신 `double`형을 사용한다면? 
 
-![image-20201122205021253](C:\Users\MS\AppData\Roaming\Typora\typora-user-images\image-20201122205021253.png)
+![image-20201122205021253](C:\Users\MS\Desktop\이직\whiteshipstudy\screenshot\1.PNG)
 
 ![image-20201122205033774](C:\Users\MS\AppData\Roaming\Typora\typora-user-images\image-20201122205033774.png)
 
