--- a/3주차.md
+++ b/3주차.md
@@ -6,8 +6,7 @@
 
 산술 연산자에는 `+, -, *, /, %`가 있다. 산술연산자일 경우는 숫자타입(byte, short, int, long, float, double)으로 결과값이 나온다.
 
-![1](C:\Users\MS\Desktop\이직\whiteshipstudy\screenshot\1.PNG)
-
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/1.PNG"> </img>
 ![1-1](C:\Users\MS\Desktop\이직\whiteshipstudy\screenshot\1-1.PNG)
 
 *는 곱하기, / 는 나누기를 하여 몫을 구하는 연산자이다.
