--- a/3주차.md
+++ b/3주차.md
@@ -11,9 +11,9 @@
 
 *는 곱하기, / 는 나누기를 하여 몫을 구하는 연산자이다.
 
-![image-20201122204218748](C:\Users\MS\AppData\Roaming\Typora\typora-user-images\image-20201122204218748.png)
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/2.PNG"> </img>
 
-![image-20201122204234159](C:\Users\MS\AppData\Roaming\Typora\typora-user-images\image-20201122204234159.png)
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/2-1.PNG"> </img>
 
 
 
