사진 업로드

--- a/3주차.md
+++ b/3주차.md
@@ -7,11 +7,18 @@
 산술 연산자에는 `+, -, *, /, %`가 있다. 산술연산자일 경우는 숫자타입(byte, short, int, long, float, double)으로 결과값이 나온다.
 
 <img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/1.PNG"> </img>
+
 <img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/1-1.PNG"> </img>
+
+
 
 *는 곱하기, / 는 나누기를 하여 몫을 구하는 연산자이다.
 
+
+
 <img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/2.PNG"> </img>
+
+
 
 <img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/2-1.PNG"> </img>
 
@@ -23,15 +30,19 @@
 
 그렇다면 `int` 대신 `double`형을 사용한다면? 
 
-![image-20201122205021253](C:\Users\MS\Desktop\이직\whiteshipstudy\screenshot\1.PNG)
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/3.PNG"> </img>
 
-![image-20201122205033774](C:\Users\MS\AppData\Roaming\Typora\typora-user-images\image-20201122205033774.png)
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/3-1.PNG"> </img>
 
 가능하다.
 
 산술연산자는 피연산자, 즉 연산되는 데이터인 a, b와 같은 변수가 단항(1개)일때는 사용하지 못하며, 이항(2개 이상)일때 계산식으로서 사용가능하다.
 
-![image-20201122211949046](C:\Users\MS\AppData\Roaming\Typora\typora-user-images\image-20201122211949046.png)
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/4.PNG"> </img>
 
 이것은 왜 에러가나는가..?? 모두 정수타입이고 `int` 타입보다 크기가 작은 타입일 경우 모두 `int` 타입으로 변환 후 연산을 수행한다. 이는 자바 가상 머신(JVM)이 기본적으로 32비트 단위로 계산하기 때문이다.
 
@@ -64,6 +75,8 @@
 `~` 의 경우 비트 반전 연산자로 정수타입의 피연산자에만 사용되며, 피연산자를 2진수로 표현했을 때 비트값인 0을 1로 , 1은 0으로 반전한다. 연산 후, 부호 비트인 최상위 비트를 포함해서 모든 비트가 반전되기 때문에, 부호가 반대인 새로운 값이 산출된다. 
 
 비트 반전 연산자를 사용할 때 주의할 점은 비트 반전 연산자 산출 타입은 int 타입이 된다는 것이다.
+
+
 
 #### 3. 관계 연산자
 
