비트 이동 연산자 해야할 차례

--- a/3주차.md
+++ b/3주차.md
@@ -76,9 +76,49 @@
 
 비트 반전 연산자를 사용할 때 주의할 점은 비트 반전 연산자 산출 타입은 int 타입이 된다는 것이다.
 
+다시 비트 논리 연산자로 돌아와 `&, |, ^`  종류와 기능에 대해 설명하자면,
+
+AND(논리곱) 으로 1 & 1 = 1, 1 & 0 = 0, 0 & 1 = 0, 0 & 0 = 0 으로 두 비트 모두 1일 경우에만 연산결과가 1이된다.
+
+OR(논리합)은 1 | 1 = 1, 1 | 0 = 1, 0 | 1 = 1, 0 | 0 = 0 으로 두 비트 중 하나만 1이면 연산결과는 1이다.
+
+XOR(배타적 논리합) 1 ^ 1 = 0, 1 ^ 0 = 1, 0 ^ 1 = 1, 0 ^ 0 = 0으로 두 비트 중 하나는 1이고 다른 하나가 0일 경우 연산 결과는 1이다.
+
+NOT 논리 부정은 ` ~ ` 표시 이며 1 일때는 0 , 0 일때는 1이 되는 보수의 개념이다.
+
+비트 연산자는 피연산자를 int 타입으로 자동 타입 변환 후 연산을 수행한다. 그렇기 때문에 byte, short, char 타입을 비트 논리 연산하면 그 결과는 int 타입이 된다.
+
+따라서 아래의 그림은 에러가 난다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/5.PNG"> </img>
+
+
+
+실제로 45와 25의 비트 연산은 4byte인 int 타입으로 변환된 후 다음과 같이 연산된다.
+
+00000000 00000000 00000000 00101101 = 45
+
+​								&
+
+00000000 00000000 00000000 00011001 = 25
+
+`----------------------------------`
+
+00000000 00000000 00000000 00001001 = 9
+
+
+
+
+
+
+
 
 
 #### 3. 관계 연산자
+
+
+
+
 
 #### 4. 논리 연산자
 
