논리연산자 할차례

--- a/3주차.md
+++ b/3주차.md
@@ -108,15 +108,101 @@ NOT 논리 부정은 ` ~ ` 표시 이며 1 일때는 0 , 0 일때는 1이 되는
 
 
 
+비트 이동 연산자 `<<, >>, >>>` 는 정수 데이터의 비트를 좌측 또는 우측으로 밀어서 이동시키는 연산을 수행한다.
 
+간단한 예로
 
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/6.PNG"> </img>
 
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/6-1.PNG"> </img>
+
+이런 결과를 확인할 수 있다.
+
+int는 32비트(4byte) 이다 
+
+1은 00000000 00000000 00000000 00000001 로 표시될 수 있고 `<< 3`의 경우 3비트 좌측으로 이동시킨다. 그 결과는
+
+​       00000000 00000000 00000000 00001000 으로 표시된다. 그럼 2의3승 즉, 8이 나오는 것이다.
+
+  반대로 `>> 3` 도 비슷한 방식으로 처리된다. 
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/6-2.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/6-3.PNG"> </img>
+
+ -8의 경우 11111111 11111111 11111111 11111000 의 비트를 가지고 있고 제일 앞의 1이 1이면 음수 0이면 양수를 나타낸다.
+
+이를 3비트 오른쪽으로 이동하며 빈공간을 1로 채우는데 
+
+11111111 1111111 11111111 11111111 이 되고 기존의 000은 오른쪽으로 이동하며 버려지게 된다. 따라서 결과가 -1이 나오는 것이고
+
+`>>>`의 경우 
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/6-4.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/6-5.PNG"> </img>
+
+11111111 11111111 11111111 11111000 에서
+
+00011111 11111111 11111111 11111111 이 되고 이진수를 십진수로 변환하여 다음과 같은 결과가 나온것이다.
 
 
 
 #### 3. 관계 연산자
 
+관계연산자는 대소`< , <=, >, >=` 또는 동등 `==, !=`을 비교해서 boolean 타입인 true/false를 산출한다.
 
+대소 연산자는 boolean 타입을 제외한 기본 타입에 사용할 수 있고, 동등 연산자는 모든 타입에 사용될 수 있다.
+
+동등 연산자  
+
+``````
+피연산자1 == 피연산자2 //두 피연산자의 값이 같은지를 검사
+피연산자1 != 피연산자2 //두 피연산자의 값이 다른지를 검사
+``````
+
+  크기비교 연산자
+
+``````
+피연산자1 > 피연산자2 //피연산자1이 큰지를 검사
+피연산자1 >= 피연산자2 //피연산자1이 크거나 같은지를 검사
+피연산자1 < 피연산자2 //피연산자1이 작은지를 검사
+피연산자1 =< 피연산자2 //피연산자1이 작거나 같은를 검사
+``````
+
+만약 피연산자가 char 타입이면 유니코드 값으로 비교 연산을 수행한다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/7.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/7-1.PNG"> </img>
+
+A와B를 비교할때 A의 유니코드 65 B의 유니코드 66로 비교함에 따라 true의 결과를 얻을 수 있는 걸 확인해보았다.
+
+
+
+기본타입인 변수의 값을 비교할 때에는 == 연산자를 사용자를 사용하면 원하지 않는 결과가 나올 수도있다.
+
+다음의 코드를 살펴보자
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/8.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/8-1.PNG"> </img>
+
+그 이유는 다음 그림과 같이 설명할 수 있다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/9.jpg"> </img>
+
+자바는 문자열 리터럴이 동일하다면 동일한 String 객체를 참조하도록 되어 있다. 그래서 변수 name1과 name2는 동일한 String 객체의 번지값을 가지고 있다.
+
+그러나 변수 name3은 객체 생성 연산자인 new로 생성한 새로운 String 객체의 번지값을 가지고 있기 때문에 false로 결과가 나왔다.
+
+동일한 String 객체이건 다른 String 객체이건 상관없이 String 객체의 문자열을 비교하고 싶다면 `==` 연산자 대신에 `equal()` 메소드를 사용해야 한다.
+
+`equals()` 메소드는 원본 문자열과 매개값으로 주어진 비교 문자열이 동일한지 비교한 후 true 또는 false를 리턴한다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/10.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/10-1.PNG"> </img>
 
 
 
