--- a/3주차.md
+++ b/3주차.md
@@ -208,14 +208,246 @@ A와B를 비교할때 A의 유니코드 65 B의 유니코드 66로 비교함에 
 
 #### 4. 논리 연산자
 
+논리 연산자는 논리곱(&&), 논리합(||), 배타적 논리합(^) 그리고 논리부정(!) 연산을 수행한다.
+
+논리 연산자의 피연산자는 boolean 타입만 사용할 수 있다. 
+
+AND(논리곱) true && true = true
+
+​					   true && false = false
+
+​					   false && true = false
+
+​					   false && false = false
+
+OR(논리합)    true || true = true
+
+​					   true || false = true
+
+​					   false || true = true
+
+​					   false || false = false
+
+XOR(배타적 논리합) true ^ true = false
+
+​					   			true ^ false = true
+
+​					   			false ^ true = true
+
+​					   			false ^ false = false
+
+NOT(논리부정)  !true = false
+
+​							!false = true
+
+
+
+`&&`과 `&`은 산출 결과는 같지만 연산 과정이 조금 다르다. `&&`는 앞의 피연산자가 false라면 뒤의 피연산자를 평가하지 않고 바로 false라는 산출 결과를 낸다.
+
+왜냐하면 하나라도 false라면 전체 연산식은 false이기 때문이다. 그러나 `&`는 두 피연산자 모두를 평가해서 산출 결과를 낸다. 따라서 `&`보다는 `&&` 가 더 효율적
+
+으로 동작한다. `||`과 `|`도 마찬가지이다. `||`는 앞의 피연산자가 true라면 뒤의 피연산자를 피연산자를 평가하지 않고 바로 true 라는 산출 결과를 낸다. 
+
+왜냐하면 하나라도 true이면 전체 연산식은 true이기 때문이다. 그러나 `|`는 두 피연산자 모두를 평가해서 산출 결과를 낸다. 따라서 `|` 보다는 `||`가 더 효율적
+
+으로 동작한다. 
+
+
+
 #### 5. instanceof
+
+참조 변수가 instanceof 로 형 변환 가능한 타입인지 연산합니다. 가능하다면 true, 불가능 하다면 false
+
+간단한 예를 보자면
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/11.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/11-1.PNG"> </img>
+
+
+
+조금 더 생각해보자 Aclass 라는 클래스가 있고 Bclass라는 클래스가 있다 Bclass는 A로 부터 상속받은 클래스 이다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/12.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/12-1.PNG"> </img>
+
+
+
+왜 세번째만 false인가 ?? 
+
+부모가 있어야 자식이 있어야하는데, 세 번째는 부모가 자식이 되려 했기 때문이다.
+
+다시 말해 
+
+자식객체 instanceof 부모타입 == ture
+
+부모객체 instanceof 자식타입 == false 가 된다.
+
+
 
 #### 6. assignment(=) operator
 
+할당 연산자 즉 대입 연산자는 `=, +=, -=, *=, /=, %=, ^=, |=, <<=, >>=, >>>=` 가 있다.
+
+대입 연산자는 오른쪽 피연산자의 값을 좌측 피연산자인 변수에 저장한다.
+
+오른쪽 피연산자는 리터럴 및 변수, 그리고 다른 연산식이 올 수 있다.
+
+``` a = b = c = 5 ``` 가 있을때 순서는 오른쪽에서 왼쪽순이다. 
+
+첫 번째로 5가 c에 c가 b에 b가 a에 대입된다.  
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/13.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/13-1.PNG"> </img>
+
+
+
 #### 7. 화살표(->) 연산자
+
+화살표 연산자 즉, 람다식 연산자에 대해 알아보기 전에 람다식이란 무엇인가에 대해 설명하자면
+
+자바는 함수적 프로그래밍을 위해 자바 8버전 부터 람다식을 지원한다. 람다식은 익명 함수를 생성하기 위한 식으로 객체 지향 언어보다는 함수 지향 언어에 가깝다.
+
+자바에서 람다식을 수용한 이유는 자바 코드가 매우 간결해지고, 컬렉션의 요소를 필터링하거나 매핑해서 원하는 결과를 쉽게 집계할 수 있기 때문이다. 
+
+람다식의 형태는 매개 변수를 가진 코드 블록이지만, 런타임 시에는 익명 구현 객체를 생성한다.
+
+`람다식 -> 매개변수를 가진 코드 블록 -> 익명 구현 객체`
+
+예를 들어 Runnable 인터페이스의 익명 구현 객체를 생성하는 전형적인 코드는 다음과 같다.
+
+```
+Runnable runnable = new Runnable(){
+	public void run(){...}
+}
+```
+
+위의 코드에서 익명 구현 객체를 람다식으로 표현하면 다음과 같다.
+
+```
+Runnable runnable = () -> {...}
+```
+
+람다식의 기본문법은
+
+(타입 매개변수, ...) -> {실행문; ...} 이다. 예를 들어 int 매개 변수 a의 값을 콘솔에 출력하기 위해 다음과 같이 람다식을 작성할 수 있다.
+
+```
+(int a) -> {System.out.println(a);}
+```
+
+매개 변수 타입은 런타임 시에 대입되는 값에 따라 자동으로 인식될 수 있기 때문에 람다식에서는 매개 변수의 타입을 일반적으로 언급하지 않는다. 그래서 위 코드는 다음과 같이 작성할 수 있다.
+
+```
+(a) -> {System.out.println(a);}
+```
+
+만약 하나의 매개 변수만 있다면 괄호() 를 생략할 수 있고, 하나의 실행문만 있다면 중괄호{} 도 생략 할 수 있다. 그래서 위 코드는 다음과 같이 작성 할 수 도있다.
+
+```
+a -> System.out.println(a)
+```
+
+만약 매개 변수가 없다면 람다식에서 매개 변수 자리가 없어지므로 다음과 같이 빈 괄호()를 반드시 사용해야 한다.
+
+```
+() -> {실행문; ...}
+```
+
+중괄호 {} 를 실행하고 결과값을 리턴해야 한다면 다음과 같이 return문으로 결과값을 지정할 수 있다.
+
+```
+(x,y) -> {return x+y;}
+```
+
+중괄호 {} 에 return문만 있을 경우, 람다식에서는 return문을 사용하지않고 다음과 같이 작성하는 것이 정석이다.
+
+```
+(x,y) -> x+y 
+```
+
+
+
+15주차 과제에 있는 람다식을 공부할때 조금 더 자세히 파봐야 할거같다..
+
+
 
 #### 8. 3항 연산자
 
+삼항 연산자는 세 개의 피연산자가 필요로 하는 연산자를 말한다.
+
+삼한 연산자는 (?) 앞의 조건식에 따라 콜론 (:) 앞뒤의 피연산자가 선택된다고 해서 조건 연산식이라고 부르기도 한다.
+
+
+
+​	조건식       ?      값 또는 연산식 : 값 또는 연산식   	으로 표현할 수 있다
+
+(피연산자1)			(피연산자2)      	(피연산자3)        
+
+피연산자1이 참일경우 피연산자2 거짓일 경우 피연산자3이된다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/14.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/14-1.PNG"> </img>
+
+
+
+삼항 연산자는 보통 다음과 같이 한줄로 작성이 가능하지만
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/14.PNG"> </img>
+
+기본 if 문을 사용하게 된다면?
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/14-2.PNG"> </img>
+
+로 길어지게 된다.
+
+
+
 #### 9.연산자 우선 순위
 
+연산자의 방향과 우선순위
+
+산술 연산식에는 덧셈,뺄셈 보다 곱셈, 나눗셈 연산자가 우선 처리된다.
+
+그렇다면 다른 연산자들의 경우는 어떨지 궁금하다. 예를들어 다름과 같은 연산식에서는 `&&` 이먼저 처리될지 `>, <`가 먼저 처리 될까?
+
+```
+x > 0 && y < 0
+```
+
+프로그램에서는 연산자의 연산 방향과 연산자 간의 우선순위가 정해져 있다. `&&` 보다는 `>,<`가 우선 순위가 높기 때문에 x>0, 과y<0이 먼저 처리된다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/15.PNG"> </img>
+
+또한 괄호()가 있다면 괄호가 우선순위로 처리된다.
+
+우선순위와 연산의 방향을 정리하자면 다음과 같다.
+
+1. 단항, 이항, 삼항 연산자 순으로 우선순위를 가진다.
+
+2. 산술,비교,논리,대입 연산자 순으로 우선순위를 가진다.
+
+3. 단항과 대입 연산자를 제외한 모든 연산의 방향은 왼쪽에서 오른쪽이다.
+
+4. 복잡한 연산식에는 괄호()를 사용해서 우선순위를 정해준다.
+
+   
+
 #### 10. (optional) Java 13. switch 연산자
+
+
+
+
+
+참고 문헌 
+
+이것이 자바다
+
+참고 블로그
+
+https://blog.naver.com/rwans0397/220602620066
+
+https://improver.tistory.com/140
