3주차 과제 완료

--- a/3주차.md
+++ b/3주차.md
@@ -1,6 +1,6 @@
 # 3주차
 
-#### 1. 산술 연산자
+### 1. 산술 연산자
 
 프로그램에서 데이터를 처리하여 결과를 산출하는 것을 연산이라고 한다. 연산에 사용되는 표시나 기호를 연산자(operator)라고 한다.
 
@@ -64,7 +64,9 @@
 
 
 
-#### 2. 비트 연산자
+### 2. 비트 연산자
+
+
 
 비트 연산자는 데이터를 비트(bit) 단위로 연산한다. 즉, 0과 1이 피연산자가 된다. 그렇기 때문에 0과 1로 표현이 가능한 정수 타입만 비트 연산을 할 수 있다.
 
@@ -148,7 +150,9 @@ int는 32비트(4byte) 이다
 
 
 
-#### 3. 관계 연산자
+### 3. 관계 연산자
+
+
 
 관계연산자는 대소`< , <=, >, >=` 또는 동등 `==, !=`을 비교해서 boolean 타입인 true/false를 산출한다.
 
@@ -206,13 +210,17 @@ A와B를 비교할때 A의 유니코드 65 B의 유니코드 66로 비교함에 
 
 
 
-#### 4. 논리 연산자
+### 4. 논리 연산자
+
+
 
 논리 연산자는 논리곱(&&), 논리합(||), 배타적 논리합(^) 그리고 논리부정(!) 연산을 수행한다.
 
 논리 연산자의 피연산자는 boolean 타입만 사용할 수 있다. 
 
-AND(논리곱) true && true = true
+AND(논리곱) 
+
+true && true = true
 
 ​					   true && false = false
 
@@ -220,7 +228,9 @@ AND(논리곱) true && true = true
 
 ​					   false && false = false
 
-OR(논리합)    true || true = true
+OR(논리합)    
+
+true || true = true
 
 ​					   true || false = true
 
@@ -228,7 +238,9 @@ OR(논리합)    true || true = true
 
 ​					   false || false = false
 
-XOR(배타적 논리합) true ^ true = false
+XOR(배타적 논리합)
+
+true ^ true = false
 
 ​					   			true ^ false = true
 
@@ -236,7 +248,9 @@ XOR(배타적 논리합) true ^ true = false
 
 ​					   			false ^ false = false
 
-NOT(논리부정)  !true = false
+NOT(논리부정) 
+
+ !true = false
 
 ​							!false = true
 
@@ -254,7 +268,9 @@ NOT(논리부정)  !true = false
 
 
 
-#### 5. instanceof
+### 5. instanceof
+
+
 
 참조 변수가 instanceof 로 형 변환 가능한 타입인지 연산합니다. 가능하다면 true, 불가능 하다면 false
 
@@ -286,7 +302,9 @@ NOT(논리부정)  !true = false
 
 
 
-#### 6. assignment(=) operator
+### 6. assignment(=) operator
+
+
 
 할당 연산자 즉 대입 연산자는 `=, +=, -=, *=, /=, %=, ^=, |=, <<=, >>=, >>>=` 가 있다.
 
@@ -304,7 +322,9 @@ NOT(논리부정)  !true = false
 
 
 
-#### 7. 화살표(->) 연산자
+### 7. 화살표(->) 연산자
+
+
 
 화살표 연산자 즉, 람다식 연산자에 대해 알아보기 전에 람다식이란 무엇인가에 대해 설명하자면
 
@@ -374,7 +394,9 @@ a -> System.out.println(a)
 
 
 
-#### 8. 3항 연산자
+### 8. 3항 연산자
+
+
 
 삼항 연산자는 세 개의 피연산자가 필요로 하는 연산자를 말한다.
 
@@ -406,7 +428,9 @@ a -> System.out.println(a)
 
 
 
-#### 9.연산자 우선 순위
+### 9. 연산자 우선 순위
+
+
 
 연산자의 방향과 우선순위
 
@@ -436,7 +460,33 @@ x > 0 && y < 0
 
    
 
-#### 10. (optional) Java 13. switch 연산자
+### 10. (optional) java 13.swich 연산자
+
+switch문은 if문과 마찬가지로 조건 제어문이다. 추후에 조건 제어문에서 좀 더 자세히 설명하기로 하고 간단하게 예시를 살펴보자
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/16.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/16-1.PNG"> </img>
+
+
+
+java 12 부터는 람다식 표현이 가능해 졌다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/16-2.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/16-3.PNG"> </img>
+
+
+
+java13 이 나오고 swich문의 좀 더 확장 되었습니다.
+
+return을 대신해서 yield라는 값을 return 할 수 있게 되었다.
+
+ <img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/16-4.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/16-5.PNG"> </img>
+
+
 
 
 
@@ -451,3 +501,5 @@ x > 0 && y < 0
 https://blog.naver.com/rwans0397/220602620066
 
 https://improver.tistory.com/140
+
+https://catch-me-java.tistory.com/31
