--- a/4주차.md
+++ b/4주차.md
@@ -86,9 +86,21 @@ if문의 블록내부에는 또 다른 if문을 사용할 수 있다. 이것을 
 
 #### switch문
 
+switch문은 if문과 마찬가지로 조건 제어문이다. 하지만 switch문은 if문처럼 조건식이 true일 경우에 블록 내부의 실행문을실행하는 것이 아니라, 변수가 어떤 값을 갖느냐에 따라 실행문이 선택된다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/switch.PNG"> </img>
 
 
 
+switch문은 괄호 안의 값과 동일하게 값을 갖는 case로 가서 실행문을 실행시킨다. 만약 괄호 안의 값과 동일한 값을 갖는 case가 없으면 default로 가서 실행문을 실행 시킨다. default는 생략가능하다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-1.PNG"> </img>
+
+
+
+case 끝에 break; 가 붙어있는 이유는 다음 case를 실행하지 말고 switch문을 빠져나가기 위해서이다.
 
 
 
@@ -98,7 +110,137 @@ if문의 블록내부에는 또 다른 if문을 사용할 수 있다. 이것을 
 
 
 
+#### for문
 
+프로그램을 작성하다 보면 똑같은 실행문을 반복적으로 실행해야할 경우가 많이 발생한다.
+
+```
+int sum = 0;
+sum = sum + 1;
+sum = sum + 2;
+sum = sum + 3;
+sum = sum + 4;
+sum = sum + 5;
+System.out.println("1~5까지의 합 : "+ sum);
+```
+
+현재는 5까지만 되어있지만 100까지의 합을구하기위해서는 코드낭비가 심해진다.
+
+하지만 for문을 이용하면 코드를 줄일 수 있다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-2.PNG"> </img>
+
+
+
+다음그림은 for문의 실행흐름을 도식화 한것이다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-3.PNG"> </img>
+
+
+
+for문은 또 다른 for문을 내포할 수 있는데, 이것을 중첩된 for문이라고 한다. 이 경우 바깥쪽 for문이 한 번 실행할 때마다 중첩된 for문은 지정된 횟수만큼 반복해서 돌다가 다시 바깥쪽 for문으로 돌아간다. 주로 중첩된 for문의 예로는 구구단 출력이 대표적이다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-4.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-5.PNG"> </img>
+
+
+
+또한 for each문도 있는데 향상된 for문이라고도 합니다.
+
+예를 들어 배열에 10개의 값이 있는데 이러한 값들을 하나씩 다 꺼내야한다면 
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-6.PNG"> </img>
+
+위의 코드와 같이 나타내야 합니다.
+
+하지만
+
+`for(변수타입 변수이름 : 배열이름)` 을 이용하면
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-7.PNG"> </img>
+
+처럼 이용할 수 있습니다.
+
+
+
+
+
+#### while문
+
+for문이 정해진 횟수만큼 반복한다면, while문은 조건식이 true일 경우에 계속해서 반복한다.
+
+조건식에는 비교 또는 논리 연산식이 주로 오는데, 조건식이 false가 되면 반복 행위를 멈추고 while문을 종료한다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-8.PNG"> </img>
+
+
+
+while문을 활용하여 1부터 10까지 출력을 해보자
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-9.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-10.PNG"> </img>
+
+
+
+증감연산자를 사용하여 i를 1씩늘리고 i가 11이 될때 `while(i<=11)` 이 false로 바뀌기 때문에 while문을 넘어가게 된다. 
+
+조건식에 true로 해놓으면 무한 루프를 돌게 되기 때문에 제대로 확인해야 한다.
+
+
+
+#### do-while문
+
+do-while문은 조건식에 의해 반복 실행한다는 점에서는 while문과 동일하다.
+
+while문은 시작할 때 부터 조건식을 검사하여 블록 내부를 실행할지 결정하지만, 경우에 따라서는 블록 내부의 실행문을 우선 실행시키고 실행 결과에 따라서 반복 실행을 계속할지 결정하는 경우도 발생한다. 이때 do-while문을 사용할 수 있다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-11.PNG"> </img>
+
+
+
+다음 사진은 do-while문을 이용하여 1부터 10까지 출력하는 코드 이다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-12.PNG"> </img>
+
+
+
+#### break문
+
+break문은 반복문인 for문, while문, do-while문의 실행을 중지할 때 사용된다.
+
+다음 사진은 while문을 이용해서 주사위 번호 중 하나를 반복적으로 뽑되, 6이 나오면 while문을 종료시킨다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-13.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-14.PNG"> </img>
+
+
+
+#### continue문
+
+continue문은 반복문인 for문, while문, do-while문에서만 사용되는데, 블록 내부에서 continue문이 실행되면 for문의 증감식 또는 while문, do-while문의 조건식으로 이동한다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-15.PNG"> </img>
+
+
+
+continue문은 반복문을 종료하지 않고 계속 반복을 수행한다는 점이 break문과 다르다
+
+break문과 마친가지로 continue문도 대게 if문과 같이 사용되는데, 특정 조건을 만족하는 경우에 continue문을 실행해서 그 이후의 문장을 실행하지 않고 다음 반복으로 넘어간다.
+
+
+
+다음 그림은 1에서 10사이의 수 중에서 짝수만 출력하는 코드이다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-16.PNG"> </img>
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/18-17.PNG"> </img>
 
 
 
@@ -114,3 +256,4 @@ if문의 블록내부에는 또 다른 if문을 사용할 수 있다. 이것을 
 
 참고 블로그
 
+https://library1008.tistory.com/66
