--- a/4주차과제.md
+++ b/4주차과제.md
@@ -6,6 +6,123 @@
 
 
 
+Junit 이란 ? 
+
+* Junit 이란 JAVA의 단위 테스팅 도구이다. Java에서 독릭된 단위테스트(Unit Test)를 지원해주는 프레임워크이다.
+
+
+
+단위테스트(Unit Test)란?
+
+* 소스코드의 특정 모듈이 의도된 대로 정확히 작동하는지 검증하는 절차이다.
+
+* 모든 함수와 메소드에 대한 테스트 케이스(Test Case)를 작성하는 절차를 말한다.
+
+* Junit은 보이지 않고 숨겨진 단위 테스트를 끌어내어 정형화 시켜 단위 테스트를 쉽게 해주는 테스트 지원 프레임워크이다.
+
+
+
+Junit 특징
+
+* 단정(assert) 메소드로 테스트 케이스의 수행 결과를 판별한다.ex) assertEquals(예상값, 실제값)
+* Junit4 부터는 테스트를 지원하는 어노테이션을 제공한다.(@Test , @Before, @After)
+* @Test 메서드가 호출할 때 마다 새로운 인스턴스를 생성하여 독립적인 테스트가 이루어지게 한다.
+
+
+
+Junit5 = Junit Platform + Junit Jupiter + Junit Vintage 
+
+기존의 Junit 버전들과는 달리 Junit5는 서로 다른 하위 프로젝트로 부터 기원한 서로 다른 모듈의 집합이다.
+
+* Junit Platfrom
+  * 플랫폼(Junit Platform)은 JVM 기반 테스팅 프레임워크를 실행시키기 위한 기반 모듈이다.
+  * 플랫폼 모듈은 플랫폼 기반으로 실행 가능한 모든 테스팅을 위해 테스트 엔진 API를 제공하며, 이러한 테스팅을 Gradle, Maven과 연동 가능하게 하는 콘솔 런처를 제공한다.
+  * 플랫폼 모듈은 또한 , Junit4 환경 하에서 플랫폼 모듈을 이용하여 진행하는 테스트를 위해 러너(Runner)를 제공한다.
+* Junit Jupiter
+  * 주피터는 Junit5 기반 테스트 케이스를 작성하기 위한 프로그래밍 모델과 확장 모델을 지원하는 모듈이다.
+  * 주피터 모듈은 주피터 기반으로 작성된 테스트 케이스를 플랫폼에서 실행시키기 위한 테스트 엔진 역시 제공한다.
+* Junit Vintage
+  * 빈티지는 Junit3, Junit4 기반의 테스트를 플랫폼에서 실행시키기 위한 테스트 엔진을 제공하는 모듈이다.
+
+
+
+사용법은 간단하다.
+
+다음과 같은 dependency를 pom.xml에 추가해준다.
+
+``` 
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-engine</artifactId>
+    <version>5.1.0</version>
+    <scope>test</scope>
+</dependency>
+```
+
+
+
+그리고 Junit5에는 4개의 라이플 사이클 메소드가 존재합니다.
+
+1.  @Before
+   * 테스트 Class 기준으로 테스트 메소드들이 실행되기전 실행
+2.  @BeforeEach
+   * 각 테스트 메소드가 실행되기전 실행
+
+3.  @AfterAll
+   * 테스트 Class기준으로 테스트 메소드들이 실행된 후 실행
+4.  @AfterEach
+   * 각 테스트 메소드가 실행된 후 실행
+
+```
+@SpringBootTest
+class DemoApplicationTests {
+
+	@BeforeAll
+	static void beforeAll() {
+		System.out.println("BeforeAll method call");
+	}
+
+	@BeforeEach
+	void beforeEach() {
+		System.out.println("");
+		System.out.println("BeforeEach method call");
+	}
+
+	@Test
+	void succeedingTest() {
+		System.out.println("succeedingTest method call");
+	}
+
+	@Test
+	void succeedingTest_2() {
+		System.out.println("succeedingTest_2 method call");
+	}
+
+	@AfterEach
+	void afterEach() {
+		System.out.println("afterEach method call");
+	}
+
+	@AfterAll
+	static void afterAll() {
+		System.out.println("afterAll method call");
+	}
+}
+```
+
+```
+//결과
+BeforeAll method call
+
+BeforeEach method call
+succeedingTest method call
+afterEach method call
+
+BeforeEach method call
+succeedingTest_2 method call
+afterEach method call
+afterAll method call
+```
 
 
 
@@ -16,7 +133,15 @@
 
 
 
-참고 문헌 
+
+참고 블로그
 
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
+https://galid1.tistory.com/476
+
+https://shlee0882.tistory.com/202
+
+https://awayday.github.io/2017-10-29/junit5-02/
+
+https://sabarada.tistory.com/79
