5주차 과제 완료

--- a/5주차.md
+++ b/5주차.md
@@ -213,7 +213,50 @@ double divide(int x, int y){
 double result = divide(10,20);
 ```
 
+호출 시 넘겨준 매개값인 10과 20은 해당 위치의 매개 변수인 x와y에 각각 저장되고, 이 매개 변수들을 이용해서 메소드 블록을 실행한다.
 
+divide() 메소드가  int 타입 매개 변수를 가지고 있다면 호출 시 매개값으로 int 값이나 int 타입으로 변환될 수 있는 값을 넘겨주어야 한다.
+
+```
+double result = divide(10.5, 20.5) //컴파일 에러
+```
+
+
+
+4. 리턴(return) 문
+
+메소드 선언에 리턴 타입이 있는 메소드는 반드시 retrun문을 사용해서 리턴값을 지정해야한다.
+
+retrun문의 리턴값은 리턴 타입이거나 리턴 타입으로 변환될 수 있어야 한다. 예를 들어 리턴 타입으 int인 plus() 메소드에서 byte, short, int 타입의 값이 리턴되어도 상관없다. byte와 short은 int로 자동 타입 변환되어 리턴되기 때문이다.
+
+```
+int plus(int x, int y){
+	int result = x + y;
+	return result;
+}
+
+int plus(int x, int y){
+	byte result = (byte) (x+y);
+	return result;
+}
+```
+
+
+
+return문 뒤에 실행문이 오면 "Unreachable code"라는 컴파일 오류가 발생한다. 왜냐하면 return문 이후의 실행문은 결고 실행되지 않기 때문이다.
+
+하지만 다음과 같은 경우, 컴파일 에러가 발생하지 않는다.
+
+```
+boolean isLeftGas(){
+	if(gas==0){
+		System.out.println("gas가 없습니다.");
+		return false;
+	}
+	System.out.println("gas가 있습니다.");
+	return true;
+}
+```
 
 
 
@@ -221,23 +264,155 @@ double result = divide(10,20);
 
 ### 생성자 정의하는 방법
 
+생성자(Constructor)는 new 연산자와 같이 사용되어 클래스로부터 객체를 생성할 때 호출되어 객체의 초기화를 담당한다.
+
+객체 초기화란 필드를 초기화하거나, 메소드를 호출해서 객체를 사용할 준비를 하는 것을 말한다.
+
+new 연산자에 의해 생성자가 성공적으로 실행되면 힙(heap) 영역에 객체가 생성되고 객체의 주소가 리턴된다. 리턴된 객체의 주소는 클래스 타입 변수에 저장되어 객체에 접근할 때 이용된다. 만약 생성자가 성공적으로 실행되지 않고 예외(에러)가 발생했다면 객체는 생성되지 않는다.
+
+
+
+1. 기본 생성자
+
+모든 클래스는 생성자가 반드시 존재하며, 하나 이상을 가질 수 있다. 
+
+우리가 클래스 내부에 생성자 선언을 생략했다면 컴파일러는 다음과 같이 중괄호{} 블록 내용이 비어있는 기본 생성자(Default Constructor)를 바이트 코드에 자동 추가시킨다.
+
+```
+//소스파일(Car.java)
+public class Car{
+
+}
+//바이트 코드 파일(Car.class)
+public class Car{
+	public Car(){} //자동추가
+}
+```
+
+그렇기 때문에 클래스에 생성자를 선언하지 않아도 다음과 같이 new 연산자 뒤에 기본 생성자를 호출해서 객체를 생성시킬 수 있다.
+
+```
+Car myCar = new Car();
+```
+
+
+
+2. 생성자 선언
+
+기본 생성자 대신 우리가 생성자를 명시적으로 선언하려면 다음과 같은 형태로 작성하면 된다.
+
+```
+클래스(매개변수선언, ...){
+	//객체의 초기화 코드
+}
+```
+
+생성자는 메소드와 비슷한 모양을 가지고 있으나, 리턴 타입이 없고 클래스 이름과 동일하다.
+
+생성자 블록 내부에는 객체 초기화 코드가 작성되는데, 일반적으로 필드에 초기값을 저장하거나 메소드를 호출하여 객체 사용 전에 필요한 준비를 한다.
+
+
+
+예를들어 다음과 같이 Car 생성자를 호출할 때 세 개의 값을 제공한다고 보자
+
+```
+Car myCar = new Car("그랜져","검정",300);
+```
+
+두 개의 매개값은 String 타입이고 마지막 매개값은 int 타입인 것을 볼 수 있다. 세 매개값을 생성자가 받기 위해서는 다음과 같이 생성자를 선언해야한다.
+
+```
+public class Car{
+	//생성자
+	Car(String model, String color, int maxSpeed){...}
+}
+```
+
+클래스에 생성자가 명시적으로 선언되어 있을 경우에는 반드시 선언된 생성자를 호출해서 객체를 생성해야만 한다.
+
+
+
+```
+public class Car{
+	//생성자
+	Car(String color, int cc){
+	}
+}
+```
+
+```
+public class CarEx{
+	public static void main(String[] args){
+		Car myCar = new Car("검정",3000);
+		//Car myCar = new Car(); x기본생성자를 호출할수없다.
+	}
+}
+```
+
+
+
 
 
 ### this 키워드 이해하기
 
 
 
+먼저 코드를 살펴보자
 
+```
+public Class Korean{
+	//필드
+	String nation = "대한민국";
+	String name; 
+	String birthDay;
+	
+	//생성자
+	public Korean(String n, String b){
+		name = n;
+		birthDay = b;
+	}
+}
+```
 
+```
+public class koreanEx{
+	public static void main(String[] args){
+		Korean k1 = new Korean("홍성필", "930806");
+		System.out.println("k1.name : " + k1.name);
+		System.out.println("k1.birthDay : " + k1.birthDay);
+    }
+}
+//출력 
+k1.name : 홍성필
+k1.birthDay : 930806
+```
 
+위의 코드가 이해는 되지만 Korean 생성자의 매개 변수 이름은 각각 n 과 b를 사용했다.
 
+매개 변수의 이름이 너무 짧으면 코드의 가독성이 좋지 않기 때문에 가능하면 초기화시킬 필드 이름과 비슷하거나 동일 이름을 사용할 것을 권한다.
 
+관례적으로 필드와 동일한 이름을 갖는 매개 변수를 사용한다.
 
+이 경우 필드와 매개 변수 이름이 동일하기 때문에 생성자 내부에서 해당 필드에 접근할 수 없다. 왜냐하면 동일한 이름의 매개 변수가 사용 우선순위가 높기 때문이다. 
 
+해결 방법은 필드 앞에 "this."를 붙이면 된다. this는 객체 자신의 참조인데, 우리가 자신을 "나"라고 하듯이 객체가 객체 자신을 this라고 한다.
 
+자 다시 수정해보자
 
-
-
+```
+public Class Korean{
+	//필드
+	String nation = "대한민국";
+	String name; 
+	String birthDay;
+	
+	//생성자
+	public Korean(String name, String birthDay){
+		this.name = name; //this.name이 필드, name이 매개변수이다.
+		this.birthDay = birthDay; //this.birthDay이 필드, birthDay이 매개변수이다.
+	}
+}
+```
 
 
 
@@ -248,7 +423,3 @@ double result = divide(10,20);
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 이것이 자바다
-
-참고 블로그
-
-https://library1008.tistory.com/66
