--- a/6주차.md
+++ b/6주차.md
@@ -309,6 +309,31 @@ public class SuperSonicAirplaneExample {
 
 ### 다이나믹 메소드 디스패치 (Dynamic Method Dispatch)
 
+Method Dispatch란 어떤 메소드를 호출할지 결정하여 실제로 실행시키는 과정을 말한다.
+
+dispatch는 static dispatch와 dynamic dispatch가 있는데 static은 구현클래스를 이용해 컴파일타임에서부터 어떤 메서드가 호출될지 정해져있는것이고, dynamic은 인터페이스를 이용해 참조함으로서 호출되는 메서드가 동적으로 정해지는걸 말한다.
+
+
+
+* ***Static Dispatch***
+
+자바에서 객체 생성은 런타임시에 호출된다. 즉 컴파일타임에 알수있는건 타입에 대한 정보이다. 타입자체가 Dispatch라는 구현클래스이기때문에 해당 메서드를 호출하면 어떤 메서드가 호출될지 정적으로 정해진다. 이에대한 정보는 컴파일이 종료된 후 바이트코드에도 드러나게된다.
+
+```
+public class Test {
+    public static void main(String[] arg) {
+        Dispatch dispatch = new Dispatch();
+        System.out.println(dispatch.method());
+    }
+}
+
+class Dispatch{
+    public String method(){
+        return "hello dispatch";
+    }
+}
+
+```
 
 
 
@@ -316,8 +341,133 @@ public class SuperSonicAirplaneExample {
 
 
 
+* ***Dynamic Dispatch***
+
+인터페이스를 타입으로 메서드를 호출한다. 컴파일러는 타입에 대한 정보를 알고있으므로 런타임시에 호출 객체를 확인해 해당 객체의 메서드를 호출한다. 런타임시에 호출 객체를 알 수 있으므로 바이트코드에도 어떤 객체의 메서드를 호출해야하는지 드러나지 않는다.
+
+예제코드에서 method() 메서드는 인자가 없는 메서드이지만 자바는 묵시적으로 항상 호출 객체를 인자로 보내게된다. 호출 객체를 인자로 보내기때문에 this를 이용해 메서드 내부에서 호출객체를 참조할 수 있는 것이다
 
 
+
+```
+public class Test {
+    public static void main(String[] arg) {
+        Dispatchable dispatch = new Dispatch();
+        System.out.println(dispatch.method());
+    }
+}
+
+class Dispatch implements Dispatchable {
+    public String method(){
+        return "hello dispatch";
+    }
+}
+
+interface Dispatchable{
+    String method();
+}
+
+```
+
+
+
+
+
+### 더블 메소드 디스패치 (Double Method Dispatch)
+
+
+
+Double Dispatch는 Dynamic Dispatch를 두번하는 것이다. 
+
+
+
+```
+public class Test {
+    public static void main(String[] arg) {
+        List<SmartPhone> phoneList = Arrays.asList(new Iphone(), new Gallaxy());
+        Game game = new Game();
+        phoneList.forEach(game::play);
+    }
+}
+
+interface SmartPhone{
+}
+
+class Iphone implements SmartPhone{
+
+}
+
+class Gallaxy implements SmartPhone{
+
+}
+
+class Game {
+    public void play(SmartPhone phone) {
+        System.out.println("game play [" +phone.getClass().getSimpleName()+ "]");
+    }
+}
+
+```
+
+스마트폰 리스트를 순회하면서 각각 게임을 하고있다. 스마트폰 리스트 인터페이스를 타입파라미터로 전달했기때문에 동적디스패치로 인해 출력내용은 모두 다르다. 앞에서 말했듯이 이는 인터페이스로 참조하고있는 객체 레퍼런스를 동적으로 추적하기때문이다.
+
+만약 Game play가 스마트폰 구현체별로 다르게 구현되어야한다면 어떻게될까?
+
+```
+class Game {
+    public void play(SmartPhone phone) {
+    
+        if(phone instanceof Iphone) {
+            System.out.println("iphone play [" + phone.getClass().getSimpleName() + "]");
+        }
+
+        if(phone instanceof Gallaxy) {
+            System.out.println("gallaxy play [" + phone.getClass().getSimpleName() + "]");
+        }
+    }
+}
+
+```
+
+이런 방법이 있긴 하지만 만약 SmartPhone의 구현체로 Optimus가 추가된다면 Game 클래스까지 변경이 발생하게되어서 그렇게 효율적인 느낌은 아니다.
+
+자바에서 지원을 하고말고는 논외로하고 잠깐 생각해본다면, 어차피 런타임시에 어떤 객체가 들어오는지를 확인해서 서로 다른 메서드를 호출해주는 동적 디스패치가 존재한다면 이를 인자에도 적용할 수 있지 않을까? 그렇게되면 알맞은 SmartPhone 구현체를 확인해 알아서 각각 메서드를 호출시켜주면 참 고마울것이다. 하지만 자바에서는 그런걸 지원하지않는다. 이런 이유로 자바를 *싱글 디스패치(Single Dispatch) 언어*라고 한다.
+
+
+
+수정을 해보자
+
+```
+interface SmartPhone{
+    void game(Game game);
+}
+
+class Iphone implements SmartPhone{
+    @Override
+    public void game(Game game) {
+        System.out.println("iphone play [" + this.getClass().getSimpleName() + "]");
+    }
+}
+
+class Gallaxy implements SmartPhone{
+    @Override
+    public void game(Game game) {
+        System.out.println("gallaxy play [" + this.getClass().getSimpleName() + "]");
+    }
+}
+
+class Game {
+    public void play(SmartPhone phone) {
+        phone.game(this);
+    }
+}
+```
+
+기존 Game클래스에 존재하던 비즈니스 로직을 각각 자기자신이 직접 처리하게끔 수정했다. 
+
+이때는 디스패치가 2번 일어나게되는데 play() 메서드를 찾기위한 정적 디스패치가 발생하고, game()메서드를 호출하는 객체를 찾기위한 동적 디스패치가 발생하게된다. 
+
+나는 지금 Game 클래스를 구현 클래스로 만들었기때문에 정적1번 동적1번이 발생하지만 Game 클래스역시 인터페이스를 기반으로 구현하여 인터페이스로 참조를 하게된다면 동적 디스패치가 2번 발생할것이다. 처음이 정적이든 동적이든 play() 메서드를 찾기위한 디스패치만 발생하던 기존 코드에서 play() 메서드 내부에 비즈니스로직을 호출하는 실제 객체를 찾기위한 *동적 디스패치가 1번 더 발생하면서 더블 디스패치(Double Dispatch)가 되는 것*이다.
 
 
 
@@ -332,3 +482,5 @@ public class SuperSonicAirplaneExample {
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 이것이 자바다
+
+출처: https://multifrontgarden.tistory.com/133 [우리집앞마당]
