--- a/7주차.md
+++ b/7주차.md
@@ -37,6 +37,16 @@ Test라는 package 밑에  TestMain 클래스를 생성했다.
 
 하나의 프로젝트는 일반적으로 하나 이상의 패키지를 포함한다. <프로젝트 디렉토리>/scr 디렉토리 안에 패키지를 생성할 수도 있고 특정 패키지 안에도 하위 패키지를 생성할 수 있다. 
 
+이름 없는 패키지(unnamed package)
+
+자바의 모든 클래스는 반드시 하나 이상의 패키지에 포함되어야 한다.
+
+하지만 자바 컴파일러 소스 파일에 어떠한 패키지의 선언도 포함되지 않으면, 기본적으로 이름 없는 패키지(unnamed package)에 포함해 컴파일 한다.
+
+따라서 패키지를 명시하지 않은 모든 클래스와 인터페이스는 모두 같은 패키지에 포함되게 된다.
+
+
+
 
 
 ### 2. import 키워드
@@ -98,6 +108,8 @@ import Total.*;
 
 
 
+
+
 ### 4. CLASSPATH 환경변수
 
 
@@ -121,3 +133,5 @@ import Total.*;
 https://studymake.tistory.com/428
 
 https://wikidocs.net/231
+
+http://www.tcpschool.com/java/java_usingClass_package
