classpath옵션할차례

--- a/7주차.md
+++ b/7주차.md
@@ -102,15 +102,107 @@ import Total.*;
 
 
 
+#### static import문
+
+import문을 사용하면 클래스의 패키지명을 생략할 수 있는 것과 같이 static import문을 사용하면 static멤버를 호출할 때 클래스 이름을 생략할 수 있다. 특정 클래스의 static멤버를 자주 사용할 때 편리하다.
+
+```
+import static java.lang.Integer.*; //Integer클래스의 모든 static 메서드
+import static java.lang.Math.random; //Math.random()만. 괄호 안붙임.
+import static java.lang.System.out; //System.out을 out만으로 참조가능
+```
+
+만일 위와 같이 static import문을 선언하였다면, 아래의 왼쪽코드를 오른쪽코드와 같이 간략히 할 수 있다.
+
+System.out.println(Math.random()); -----------------> out.println(random());
+
+
+
 
 
 ### 3. 클래스패스
 
 
 
+클래스패스란, JVM이나 Java 컴파일러에 사용자정의 클래스와 패키지의 위치를 지정해주는 파라메터 이다.
+
+쉽게 말해, 자바가 클래스를 찾아 사용을 해야하는데 클래스들이 어디 있는지 위치를 지정해주는 값이다.
+
+만약 클래스 패스를 설정하지 않았다면 **디폴트는 현재 경로**를 바라보게 된다. 우리가 많이 사용하는 intellij IDE도 클래스 패스를 설정하지 않으면 기본적으로 현재 경로에서 파일을 찾는다.
+
+
+
+만약 하나의 파일을 컴파일해서 3개의 클래스 파일이 생성되었다고 가정해보자.
+
+```
+class Main {
+
+
+	public static void main(String[] args){
+		Sub sub = new Sub();
+        Sub2 sub2 = new Sub2();
+	}
+	
+	class Sub{}
+	class Sub2{}
+}
+```
+
+
+
+main.class, Sub.class, Sub2.class 
+
+
+
+Sub.class와 Sub2.class를 하위 디렉토리에 옮긴 후, 실행을 하면  JVM은 현재 디렉토리에서 클래스를 찾기 때문에 오류가 난다.
+
+이런 상황에서 클래스 패스를 지정하여 JVM의 클래스 탐색 경로를 추가해주어야 한다.
+
+ 
+
+추가적으로 정리하자면 classPath는 자바환경에서 컴파일 할 때 필요한것이고 classPath는 자바에서 컴파일 하기 위해, *.class가 모여있는 곳을 가리키는 곳이다. 
+
+예를들어 라이브러리를 import 할때, 컴파일 하는 곳에서 그 라이브러리의 경로를 알아야하는데 classPath에 그 경로를 지정해주면, javac에서 알 수 있기 때문에 `import java.util.*;` 만으로 import할 수 있다.
+
+
+
+
+
 
 
 ### 4. CLASSPATH 환경변수
+
+
+
+공식적인 의미의 **환경변수 (Environment variable)는 프로세스가 컴퓨터에서 동작하는 방식에 영향을 미치는 동적인 값**들이다. 
+
+OS상에서 동작하는 응용프로그램들이 참조하기위한 설정이 기록된다. 따라서 이 환경변수를 건드려야 할 상황이 생긴다면 신중하게 해야한다. 때에 따라서 프로그램의 정상적인 동작을 보장받지 못할 수 있기 때문이다.
+
+
+
+환경변수에도 두가지가 존재한다.
+
+**1. 사용자 변수 - OS내의 사용자 별로 다르게 설정가능한 환경변수**
+
+**2. 시스템 변수 - 시스템 전체에 모두 적용되는 환경변수**
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/classpath.PNG"> </img>
+
+cmd창에서 set을 입력하면 다음 그림과 같은 수많은 환경변수가 있다. 
+
+
+
+그럼 왜 우리는 JAVA 환경변수설정을 하는 것일까?
+
+환경변수를 설정할 때 jdk의 경로가 필요하다. 왜일까? 자바를 다운로드 받아 디렉토리로 들어가보면 jdk,jre라는 두 가지 경로가 있다.
+
+jdk는 개발과 실행이 동시에 가능한 디렉토리이고, jre는 실행만 가능한 디렉토리이다.
+
+우리는 개발을 할 것이기 때문에 jdk의 경로를 환경변수로 설정해주어야 하는 것이다.
+
+
 
 
 
@@ -130,8 +222,14 @@ import Total.*;
 
 이것이 자바다
 
-https://studymake.tistory.com/428
+자바의 정석
 
-https://wikidocs.net/231
+출처: https://studymake.tistory.com/428
 
-http://www.tcpschool.com/java/java_usingClass_package
+출처: https://wikidocs.net/231
+
+출처: http://www.tcpschool.com/java/java_usingClass_package
+
+출처: https://vvshinevv.tistory.com/70 [왜 모르는가?]
+
+출처: https://hyoje420.tistory.com/7
