--- a/7주차.md
+++ b/7주차.md
@@ -210,9 +210,29 @@ jdk는 개발과 실행이 동시에 가능한 디렉토리이고, jre는 실행
 
 
 
+classpath(cp) path(파일 절대 경로): 컴파일러가 컴파일 하기 위해서 필요로 하는 참조할 클래스 파일들을 찾기 위해서 컴파일시 파일 경로를 지정해주는 옵션. 
+
+예를 들어, Hello.java파일이 `C:\Java` 디렉터리에 존재하고, 필요한 클래스 파일들이 `C:\Java\Engclasses` 에 위치한다면, `javac -classpath C:\Java\Engclasses C:\Java\Hello.java` 로 해주면 된다. 
+
+만약 참조할 클래스 파일들이 `C:\Java\Engclasses`외의 다른 디렉터리에도 존재한다면, `C:\Java\Korclasses` 일경우, `javac -classpath C:\Java\Engclasses; C:\Java\Korclasses C:\Java\Hello.java`그리고, 현재 디렉터리역시 포함하고 싶다면, `javac -classpath  .;C:\Java\Engclasses; C:\Java\Korclasses C:\Java\Hello.java`기본적으로, dos에서는 .는 현재 디렉터리를 의미하고, ..는 현재 디렉터리의 상위디렉터리를 의미한다. 
+
+또한 classpath 대신 단축어인 cp를 사용해도 된다.`javac -cp C:JavaEngclasses C:JavaHello.java `
+
+
+
 ### 6. 접근 지시자
 
 
+
+접근 제한자란 멤버 변수와 클래스 변수를 외부에서 접근하지 못하도록 제한하는 역할을 하는 제어자. 
+
+Public : 접근제한이 거의 없는 것으로 누구나 접근 가능 
+
+Protected : 같은 패키지, 자손클래스까지 접근 가능 
+
+Default : 아무것도 표기 하지 않은 상태 같은 패키지 내에서는 접근가능함 DEFAULT는 붙이지 않음 
+
+Private : 같은 클래스 내에서만 접근 가능 SETTER 와 GETTER를 써서 내용 변경할 수 있음.
 
 
 
@@ -233,3 +253,6 @@ jdk는 개발과 실행이 동시에 가능한 디렉토리이고, jre는 실행
 출처: https://vvshinevv.tistory.com/70 [왜 모르는가?]
 
 출처: https://hyoje420.tistory.com/7
+
+출처: https://payoff.tistory.com/401 [payoff]
+
