디폴트메세지

--- a/4주차과제.md
+++ b/4주차과제.md
@@ -126,9 +126,28 @@ afterAll method call
 
 
 
+###  과제1. live-study 대시 보드를 만드는 코드를 작성하세요.
 
 
 
+### 과제2. LinkedList를 구현하세요
+
+- LinkedList에 대해 공부하세요.
+
+LinkedList는 List 구현 클래스이므로 ArrayList와 사용 방법은 똑같지만 내부 구조는 완전 다르다.
+
+ArrayList는 내부 배열에 객체를 저장해서 인덱스로 관리하지만, LinkedList는 인접 참조를 링크해서 체인처럼 관리한다.
+
+```
+List<E> list = new LinkedList<E>();
+```
+
+
+
+- 정수를 저장하는 ListNode 클래스를 구현하세요.
+- ListNode add(ListNode head, ListNode nodeToAdd, int position)를 구현하세요.
+- ListNode remove(ListNode head, int positionToRemove)를 구현하세요.
+- boolean contains(ListNode head, ListNode nodeTocheck)를 구현하세요.
 
 
 
@@ -145,3 +164,5 @@ https://shlee0882.tistory.com/202
 https://awayday.github.io/2017-10-29/junit5-02/
 
 https://sabarada.tistory.com/79
+
+이것이 자바다
