디폴트 메소드 마무리

--- a/8주차.md
+++ b/8주차.md
@@ -288,11 +288,68 @@ public abstract class Television implements RemoteControl {
 
 
 
+
+
 ### 4. 인터페이스 상속
 
 
 
 ### 5. 인터페이스의 기본메소드(Default Method), 자바 8
+
+인터페이스에서 디폴트 메소드를 허용한 이유는 기존 인터페이스를 확장해서 새로운 기능을 추가하기 위해서이다.
+
+기존 인터페이스의 이름과 추상 메소드의 변경 없이 디폴트 메소드만 추가할 수 있기 때문에 이전에 개발한 구현 클래스를 그대로 사용할 수 있으면서 새롭게 개발하는 클래스는 디폴트 메소드를 활용할 수 있다.
+
+기존에 MyInterface라는 인터페이스와 이를 구현한 MyClassA라는 클래스가 있었다. 시간이 흘러 MyInterface에 기능을 추가해야할 필요성이 생겼다. 그래서 MyInterface에 추상 메소드를 추가했는데, 추가된 추상 메소드에 대한 실체 메소드가 MyClassA에 없기 때문에 MyClassA에서 문제가 발생했다.
+
+이러한 상황에 MyInterface에 디폴트 메소드를 선언한다. 디폴트 메소드는 추상 메소드가 아니기 때문에 구현 클래스에서 실체 메소드를 작성할 필요가 없다.
+
+예제로 확인 해보자
+
+```
+public interface MyInterface {
+	public void method1();
+}
+```
+
+```
+public class MyClassA implements MyInterface {	
+	@Override
+	public void method1(){
+		System.out.println("MyClassA-method1() 실행");
+	}
+}
+```
+
+
+
+다음과 같이 MyInterface에 디폴트 메소드인 method2()를 추가해서 수정된 MyInterface를 만들었다.
+
+
+
+```
+public interface MyInterface {
+	public void method1();
+	
+	public default void method2(){
+		System.out.println("MyInterface-method2 실행");
+	}
+}
+```
+
+
+
+인터페이스를 수정하더라도 MyClassA는 컴파일 에러가 발생하지 않는다.
+
+
+
+자식 인터페이스에서 디폴트 메소드를 활용하는 방법은 다음 세 가지가 있다.
+
+* 디폴트 메소드를 단순히 상속만 받는다.
+* 디폴트 메소드를 재정의(Override)해서 실행 내용을 변경한다.
+* 디폴트 메소드를 추상 메소드로 재선언한다.
+
+
 
 
 
